--- a/manager/home.html
+++ b/manager/home.html
@@ -15,6 +15,10 @@
 		<input name="fileName" type="text" id="fileName" placeholder="Enter file name to download: " />
 		<input type="submit" value="Download">
 		</form> 
+
+		<form method ="get" action="http://localhost:3005/getFiles">
+		<input type="submit" value="See list of files uploaded.">
+		</form>
 	</body>
 
 </html>
