--- a/directory/home.html
+++ b/directory/home.html
@@ -17,7 +17,7 @@
 		</form> 
 
 		<form method ="get" action="http://localhost:3005/getFiles">
-		<input type="submit" value="See list of files uploaded.">
+		<input type="submit" value="Get updated file list">
 		</form>
 	</body>
 
